# autoPyPlusPlus

./: CPB0000000.py  Changelog.txt  LICENSE  README.md  about.py  cythoneditor.py  debuginspector.py  hash.txt  how to start.txt  myproject.apyscript  pyarmoreditor.py  requirements.txt  setup.cfg  versions.txt
src/: config.json  env_setup.ini  gui.py  msvc_start.bat  msvc_start.ps1  myproject.apyscript  update_howto.txt  windows_env.bat  windows_env.ps1  windows_msvc.bat  windows_start.bat  windows_start.ps1  windows_start_new.bat  windows_update.ps1
src/AutoPyPlusPlus/: CPA0000000.py  CPB0000000.py  CPC0000000.py  CPD0000000.py  CPE0000000.py  CPF0000000.py  CPG0000000.py  CPH0000000.py  __main__.py  about.py  apyeditor.py  compiler.py  config.json  config.py  core.py  cythoneditor.py  debuginspector.py  extension_paths_loader.py  extensions_path.ini  feedback.py  gcceditor.py  general_settings.py  gui.py  hashcheck.py  hashgenerator.py  help.py  hotkeys.py  language.py  main.py  mpyeditor.py  nuitkaeditor.py  parse_spec_file.py  project.py  projecteditor.py  pyarmor_runtime_hook.py  pyarmoreditor.py  pytesteditor.py  simplexAPI.ini  simplex_api.py  spec_parser.py  (+6 more)
src/AutoPyPlusPlus/Testfiles/: conf.py  g  test_01_no_gui.py  test_02_gui.py  test_pytest.py
src/AutoPyPlusPlus/Testfiles/CPP/: test_01_no_gui.cpp  test_02_gui.cpp
src/AutoPyPlusPlus/Testfiles/EXE/: test_01_no_gui.cpp  test_01_no_gui.exp  test_01_no_gui.lib
src/AutoPyPlusPlus/Testfiles/PYD/: test_01_no_gui.exp  test_01_no_gui.lib  test_01_no_gui.pyd
src/AutoPyPlusPlus/Testfiles/Sphinx/: conf.py
(+4 files in other folders)
