[metadata]
name = autoPyPlusPlus
version = file: VERSION
author = nexosoft
author_email = nexosoftengineering@gmail.com
description = autoPyPlusPlus
long_description = file: README.md
long_description_content_type = text/markdown
url = https://autopyplusplus.wordpress.com/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    autoPyPlusPlus = autopypplusplus.main:cli_entry
